# LTX-Desktop

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE.txt  NOTICES.md  README.md  SECURITY.md  electron-builder.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
backend/: api_types.py  app_factory.py  app_handler.py  export_openapi_schema.py  ltx2_server.py  pyproject.toml  pyrightconfig.json  secret_redaction.py  secret_vault.py
backend/_routes/: generation.py  health.py  image_edit.py  image_gen.py  lora_inference.py  lora_training.py  media.py  models.py  queue.py  settings.py
backend/handlers/: __init__.py  download_handler.py  generation_handler.py  hf_auth_handler.py  ic_lora_handler.py  image_edit_handler.py  image_generation_handler.py  imported_lora_library.py  lora_clip_jobs_runner.py  lora_command_builder.py  lora_config_builder.py  lora_cost_estimator.py  lora_dataset_prep.py  lora_derivation_runner.py  lora_export.py  lora_inference_handler.py  lora_inference_registry.py  lora_model_card.py  lora_prompt_template.py  lora_publish.py  lora_run_summary.py  lora_training_handler.py  lora_training_runner.py  media_handler.py  models_handler.py  pipelines_handler.py  queue_handler.py  queue_runner.py  retake_handler.py  settings_handler.py  suggest_gap_prompt_handler.py  video_generation_handler.py
backend/runtime_config/: image_model_specs.py  model_download_specs.py
backend/services/: __init__.py  interfaces.py  lora_diagnostics.py
backend/state/: app_settings.py  app_state_types.py  conditioning_cache.py  lora_clip_jobs_state.py  lora_derivation_jobs_state.py  lora_training_state.py  queue_state.py
backend/tests/: conftest.py  test_conditioning_cache.py  test_gemini_video_captioner.py  test_generation.py  test_health.py  test_hf_auth.py  test_ic_lora.py  test_image_edit.py  test_image_model_specs.py  test_imported_lora_library.py  test_lora_archives_billing.py  test_lora_clip_jobs.py  test_lora_command_builder.py  test_lora_config_builder.py  test_lora_dataset_export.py  test_lora_dataset_prep.py  test_lora_derivation_jobs.py  test_lora_diagnostics.py  test_lora_example_media.py  test_lora_inference_generate.py  test_lora_inference_registry.py  test_lora_local_eligibility.py  test_lora_prompt_profiler.py  test_lora_prompt_template.py  test_lora_publish.py  test_lora_run_summary.py  test_lora_training_handler.py  (+22 more)
(+232 files in other folders)
