[project]
name = "ltx-desktop-backend"
version = "1.0.0"
description = "LTX-2 Video Generation Backend"
requires-python = ">=3.12"
dependencies = [
    "pillow>=10.3.0",
    "torch==2.11.0",
    "torchaudio==2.11.0",
    "huggingface-hub>=0.23.0",
    "tqdm>=4.66.0",
    "pynvml>=11.5.0; sys_platform != 'darwin'",
    "pydantic>=2.7.0",
    # LTX-2 inference dependencies
    "ltx-core",
    "ltx-pipelines",
    "diffusers>=0.38.0",
    "ftfy>=6.0.0",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "peft>=0.13.2",
    "protobuf>=3.20.0",
    "transformers>=5.3.0",
    "sentencepiece>=0.1.99",
    "sageattention>=1.0.0; sys_platform != 'darwin'",
    "opencv-python-headless>=4.8.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "triton-windows; sys_platform == 'win32'",
    "triton; sys_platform == 'linux'",
    # LoRA-trainer remote control plane. Pure-Python and platform-agnostic:
    # the desktop app orchestrates a remote GPU (RunPod pod lifecycle via the
    # `runpod` SDK, command/file transport over SSH via `paramiko`), so these
    # ship on every platform — a Mac user still drives a remote Linux GPU.
    "runpod>=1.9.1",
    "paramiko>=5.0.0",
    "cryptography>=49.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
diffusers = { git = "https://github.com/huggingface/diffusers.git", rev = "275869dcae4ebcfee6a80253fdabc56033335020" }
ltx-core = { git = "https://github.com/Lightricks/LTX-2.git", subdirectory = "packages/ltx-core", rev = "a2c3f24078eb918171967f74b6f66b756b29ee45" }
ltx-pipelines = { git = "https://github.com/Lightricks/LTX-2.git", subdirectory = "packages/ltx-pipelines", rev = "a2c3f24078eb918171967f74b6f66b756b29ee45" }

[project.optional-dependencies]
test = ["pytest>=8.0", "requests>=2.31", "httpx>=0.27"]
dev = [
    "pyright>=1.1.380",
    "debugpy>=1.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
audit = [
    "pip-audit==2.10.1",
]
